--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,12 @@
     "sourceMap": true,
     "declaration": false,
     "downlevelIteration": true,
+    "paths": {
+      "ngx-callback-pipe": [
+        "dist/ngx-callback-pipe/ngx-callback-pipe",
+        "dist/ngx-callback-pipe"
+      ]
+    },
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
