--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-callback-pipe",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -36,5 +36,17 @@
     "karma-jasmine-html-reporter": "~1.7.0",
     "ng-packagr": "^12.1.1",
     "typescript": "~4.3.5"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 12.2.1.",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tsolyanNew/ngx-callbackPipe.git"
+  },
+  "author": "Tom Solyan <tsolyan@yahoo.com>",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/tsolyanNew/ngx-callbackPipe/issues"
+  },
+  "homepage": "https://github.com/tsolyanNew/ngx-callbackPipe#readme"
 }
